# autonomous-local-knowledge-to-anki-pipeline

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/: __init__.py
src/anki_pipeline/: __init__.py  agents.py  config.py  models.py  tools.py
